# collection

./: .gitignore  bioimageio_collection_config.json  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/actions/restore_reports/: action.yaml
.github/workflows/: build.yaml  check_compatibility.yaml  check_compatibility_biapy.yaml  check_compatibility_bioimageio_core.yaml  check_compatibility_careamics.yaml  check_compatibility_deepimagej.yaml  check_compatibility_ilastik.yaml
docs/: api.md
scripts/: check_compatibility_careamics.py  check_compatibility_deepimagej.py  check_compatibility_ilastik.py  edit_hf_collection.py  generate_compatibility_overview.py
scripts/deepimagej_jython_scripts/: deepimagej_check_outputs.py
src/backoffice/: _summarize.py  compatibility.py  index.py
